--- a/Bai13/CoCaro/index.html
+++ b/Bai13/CoCaro/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div id="showResult"></div>
-    <button type="button" id="btn" >Nhap gia tri</button>
+    <button type="button" id="btn" >Bat dau</button>
     <div id="pressRestart"></div>
 </body>
 </html>
