--- a/Bai14/QuanLySanPham/index.html
+++ b/Bai14/QuanLySanPham/index.html
@@ -32,6 +32,9 @@
             width:400px;
             padding: 20px;
         }
+        table{
+            border-collapse: collapse;
+        }
 	</style>
 </head>
 <body>
