--- a/Bai16/CoCaroAgain/index.html
+++ b/Bai16/CoCaroAgain/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+        .cell{
+            border: 1px solid blue;
+            text-align: center;
+            font-size: 30px;
+            cursor: pointer;
+            color:red;
+            width:40px;
+            height: 40px;
+        }
+        .disableBtn{
+            pointer-events: none;
+            opacity: 0.4;
+        }
+    </style>
 </head>
 <body>
-$END$
+<!--    <button id="startBtn">Start</button>-->
+    <div style="margin-top:50px" id="showResult">
+    </div>
 </body>
 </html>
+<script src="index.js"></script>
