--- a/Bai16/CarGame/index.html
+++ b/Bai16/CarGame/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+    <canvas id="myCanvas" width="200" height="300" style="border: 1px solid black"></canvas>
 </body>
 </html>
+<script src="index.js"></script>
