--- a/Bai16/CarGame/car.html
+++ b/Bai16/CarGame/car.html
@@ -8,13 +8,10 @@
             margin:0;
             overflow: hidden;
         }
-        /*#myCanvas{*/
-        /*    border: 1px solid black;*/
-        /*}*/
     </style>
 </head>
 <body>
-    <canvas id="myCanvas" ></canvas>
+<canvas id="myCanvas"  style="border:1px solid #d3d3d3;"></canvas>
 </body>
 </html>
-<script src="index.js"></script>
+<script src="car.js"></script>
